improve prediction reliability and add localization
